--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,13 +1,11 @@
 /* ============================================================================
-    Import from common.scss
-    
-    4. COMMON (Design specific rules)
+		COMMON (Design specific rules)
 ============================================================================= */
 
-@import "mixins";
+@import "helpers/mixins";
 
 /* ============================================================================
-    4.1 Header
+		4.1 Header
 ============================================================================= */
 
 .region-header {}
@@ -17,15 +15,15 @@
 --------------------------------------------------------------------------- */
 
 .site-name {
-  display:block;
-  font-size: 1em;
-  margin: 0;
-  padding: 0;
-  text-decoration:none;
+	display:block;
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
+	text-decoration:none;
 }
 
 .site-slogan {
-  @extend .site-name;
+	@extend .site-name;
 }
 
 /* @end */
@@ -35,63 +33,63 @@
 --------------------------------------------------------------------------- */
 
 .global-nav {
-    
-  li {
-    list-style: none;
-    background:none;
-    margin: 0;
-    padding: 0;
-    display:inline;
-    
-    a {
-      &:hover, &:focus {
-        color:#333;
-      }
-    }
-    
-    &.active a {
-      color:#333;
-    }
-  }
+		
+	li {
+		list-style: none;
+		background:none;
+		margin: 0;
+		padding: 0;
+		display:inline;
+		
+		a {
+			&:hover, &:focus {
+				color:#333;
+			}
+		}
+		
+		&.active a {
+			color:#333;
+		}
+	}
 }
 
 .global-nav__inner {
-  padding: 0;
-  margin: 0;
-  clear:both;
+	padding: 0;
+	margin: 0;
+	clear:both;
 }
 
 /* @end */
 
 /* ============================================================================
-    4.2 Main
+		4.2 Main
 ============================================================================= */
 
 /* ============================================================================
-    4.3 Aside
+		4.3 Aside
 ============================================================================= */
 
 /* ============================================================================
-    4.4 Pages
+		4.4 Pages
 ============================================================================= */
 
 /* ============================================================================
-    4.5 Footer
+		4.5 Footer
 ============================================================================= */
 
 .region-footer {  
-    
-  p {
-    padding: 0 1em;
-  }
+		
+	p {
+		padding: 0 1em;
+	}
 }
 
 .develop img {
-  vertical-align: middle;
+	vertical-align: middle;
 }
 
 /* ============================================================================
-    4.6 Other
+		4.6 Other
 ============================================================================= */
 
 /* Opera speed dial minimized */
