--- a/sass/plugins/_fancybox.scss
+++ b/sass/plugins/_fancybox.scss
@@ -1,244 +1,21 @@
-/* ============================================================================
-    Import from plugin-support.scss
-
-    6. PLUGINS SUPPORT  
-============================================================================= */
-
-@import "mixins";
-
-/* Custom Forms ----------------------*/
-
-form.custom {
-
-  span.custom {
-    display: inline-block;
-    width: 12px;
-    height: 12px;
-    position: relative;
-    top: 2px;
-    border: solid 1px #ccc;
-    background: #fff;
-    cursor: pointer;
-
-    &.radio { 
-      @include border-radius(100%);
-    }
-
-    &.checkbox {
-      &:before {
-        content: "\00d7";
-        display: block;
-        line-height: 0.8;
-        height: 12px;
-        width: 12px;
-        text-align: center;
-        position: absolute;
-        top: 0;
-        left: 0;
-        font-size: 13px;
-        color: #fff;
-      }
-    }
-
-    &.radio.checked {
-      &:before {
-        content: "";
-        display: block;
-        width: 8px;
-        height: 8px;
-        @include border-radius(100%);
-        background: #222;
-        position: relative;
-        top: 2px;
-        left: 2px;
-      }
-    }
-
-    &.checkbox.checked {
-      &:before {
-        color: #222;
-      }
-    }
-  }
-
-  // Custom selectbox
-
-  $input-border-color: #777 #ccc #ccc;
-
-  div.custom.dropdown {
-    display: block;
-    position: relative;
-    width: auto;
-    height: 1.4em;
-    margin-bottom: 9px;
-    margin-top: 2px;
-
-    a.current {
-      display: block;
-      width: auto;
-      height: 1.4em;
-      line-height: 1.4em;
-      text-decoration: none;
-      padding: 0 21px 0 6px;
-      border: 1px solid;
-      border-color: $input-border-color;
-      color: $baseColor;
-      background-color: #fff;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    a.selector {
-      position: absolute;
-      width: 20px;
-      height: 1.4em;
-      display: block;
-      right: 0;
-      top: 0;
-      border: solid 1px;
-      border-color: $input-border-color;
-      background-color: #fff;
-
-      &:after {
-        content: "";
-        display: block;
-        @include cssTriangle(5px, #aaa, top);
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        margin-top: -2px;
-        margin-left: -5px;
-      }
-    }
-
-
-    &:hover,
-    &.open {
-
-      a.current,
-      a.selector {
-        border-color: #777;
-      }
-
-      a.selector {
-        &:after {
-          @include cssTriangle(5px, #222, top);
-        }
-      }
-    }
-
-    &.open ul {
-      display: block;
-      z-index: 10;
-    }
-
-    &.small {
-      width: 134px !important;
-    }
-    &.medium {
-      width: 254px !important;
-    }
-    &.large {
-      width: 434px !important;
-    }
-    &.expand {
-      width: 100% !important;
-    }
-
-    &.open.small ul {
-      width: 134px !important;
-    }
-    &.open.medium ul {
-      width: 254px !important;
-    }
-    &.open.large ul {
-      width: 434px !important;
-    }
-    &.open.expand ul {
-      width: 100% !important;
-    }
-  }
-
-  div.custom.dropdown ul {
-    position: absolute;
-    width: auto;
-    display: none;
-    margin: 0;
-    left: 0;
-    top: 22px;
-    margin: 0;
-    padding: 0;
-    background: #fff;
-    background: rgba(#fff,0.95);
-    box-shadow: 0 6px 16px rgba(#000, 0.22);
-    border: 1px solid transparent;
-
-    li {
-      color: #555;
-      cursor: pointer;
-      padding: 3px 38px 3px 6px;
-      min-height: 16px;
-      line-height: 16px;
-      margin: 0;
-      white-space: nowrap;
-      list-style: none;
-
-      &.selected {
-        background: lighten($baseColor, 40%);
-        color: #000;
-      }
-
-      &:hover {
-        background-color: lighten($baseColor, 45%);
-        color: #222;
-      }
-
-      &.selected:hover {
-        background: lighten($baseColor, 40%);
-        cursor: default;
-        color: #000;
-      }
-    }
-
-    &.show {
-      display: block; 
-    }
-  }
-
-  /* Custom input, disabled */
-  .custom.disabled {
-    background-color: #ddd;
-  }
-}
-
-/* Correct FF custom dropdown height */
-// @-moz-document url-prefix() {
-//   form.custom div.custom.dropdown a.selector {
-//     height: 30px;
-//   }
-// }
-// .lt-ie9 form.custom div.custom.dropdown a.selector {
-//   height: 30px;
-// }
-
+@import "helpers/mixins";
 
 /*
 * FancyBox - jQuery Plugin
 * Simple and fancy lightbox alternative
 *
- * Examples and documentation at: http://fancybox.net
- *
- * Copyright (c) 2008 - 2010 Janis Skarnelis
- * That said, it is hardly a one-person project. Many people have submitted bugs, code, and offered their advice freely. Their support is greatly appreciated.
- *
- * Version: 1.3.4 (11/11/2010)
- * Requires: jQuery v1.3+
- *
- * Dual licensed under the MIT and GPL licenses:
- *   http://www.opensource.org/licenses/mit-license.php
- *   http://www.gnu.org/licenses/gpl.html
- */
+* Examples and documentation at: http://fancybox.net
+*
+* Copyright (c) 2008 - 2010 Janis Skarnelis
+* That said, it is hardly a one-person project. Many people have submitted bugs, code, and offered their advice freely. Their support is greatly appreciated.
+*
+* Version: 1.3.4 (11/11/2010)
+* Requires: jQuery v1.3+
+*
+* Dual licensed under the MIT and GPL licenses:
+*   http://www.opensource.org/licenses/mit-license.php
+*   http://www.gnu.org/licenses/gpl.html
+*/
 
 #fancybox-loading {
   position: fixed;
