--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* ============================================================================
-	
+
 	Weiss 2012
 
 ============================================================================= */
@@ -850,6 +850,31 @@ body {
 		4.6 Other
 ============================================================================= */
 /* Opera speed dial minimized */
+/* ============================================================================
+   @group Collapse content block
+============================================================================ */
+/* Collapse content block Behavior
+---------------------------------------------------------------------------- */
+.js-collap-ln {
+  cursor: pointer;
+  color: #0099ff;
+}
+
+.js-collap-ln_active {
+  color: #434343;
+}
+
+.js-collap-content {
+  margin: 0 !important;
+}
+
+/* Collapse content block Styles
+---------------------------------------------------------------------------- */
+.collapse-content__details {
+  padding: 20px;
+}
+
+/* @end */
 /* Custom Forms ----------------------*/
 form.custom {
   /* Custom input, disabled */
