--- a/sass/page/_global.scss
+++ b/sass/page/_global.scss
@@ -43,10 +43,12 @@ blockquote, q {
 		1.1. Typography
 ============================================================================= */
 
-h1, h2,
-.h1, .h2,
-h3, h4, h5, h6,
-.h3, .h4, .h5, .h6 {
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
 	margin: 0;
 	@if $onBodyCustomFont {
 		font-weight: normal;
