--- a/sass/blocks/_collapse.scss
+++ b/sass/blocks/_collapse.scss
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 
 /* ============================================================================
-   @group Collapse content block
+   @group Collapse-content-block
 ============================================================================ */
 
 @import "helpers/mixins";
 
-/* Collapse content block Behavior
+/* Collapse-content-block Behavior
 ---------------------------------------------------------------------------- */
 
 .js-collap-ln {
@@ -23,7 +23,7 @@
 }
 
 
-/* Collapse content block Styles
+/* Collapse-content-block Styles
 ---------------------------------------------------------------------------- */
 
 .collapse-content {}
