--- a/sass/includes/_additional.scss
+++ b/sass/includes/_additional.scss
@@ -1,5 +1,5 @@
 /* ============================================================================
-		5. MASTER-CLASSES B
+		MASTER-CLASSES B
 ============================================================================= */
 
 @import "helpers/mixins";
@@ -193,7 +193,7 @@
 
 .alt-title,
 .lead {
-		
+
 }
 
 // ============================================================================
