--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,7 +36,7 @@
 @import "plugins/foundation-custom-form";
 //@import "plugins/custom-selectbox";
 //@import "plugins/jquery-checkbox";
-@import "plugins/fancybox";
+//@import "plugins/fancybox";
 
 // Mobile device support
 // --------------------------------------------------------------------------
