--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -2,10 +2,11 @@
 		COMMON (Design specific rules)
 ============================================================================= */
 
+@import "config";
 @import "helpers/mixins";
 
 /* ============================================================================
-		4.1 Header
+		Header
 ============================================================================= */
 
 .region-header {}
@@ -33,20 +34,20 @@
 --------------------------------------------------------------------------- */
 
 .global-nav {
-		
+
 	li {
 		list-style: none;
 		background:none;
 		margin: 0;
 		padding: 0;
 		display:inline;
-		
+
 		a {
 			&:hover, &:focus {
 				color:#333;
 			}
 		}
-		
+
 		&.active a {
 			color:#333;
 		}
@@ -62,23 +63,23 @@
 /* @end */
 
 /* ============================================================================
-		4.2 Main
+		Main
 ============================================================================= */
 
 /* ============================================================================
-		4.3 Aside
+		Aside
 ============================================================================= */
 
 /* ============================================================================
-		4.4 Pages
+		Pages
 ============================================================================= */
 
 /* ============================================================================
-		4.5 Footer
+		Footer
 ============================================================================= */
 
-.region-footer {  
-		
+.region-footer {
+
 	p {
 		padding: 0 1em;
 	}
@@ -89,7 +90,7 @@
 }
 
 /* ============================================================================
-		4.6 Other
+		Other
 ============================================================================= */
 
 /* Opera speed dial minimized */
