--- a/sass/blocks/_collapse.scss
+++ b/sass/blocks/_collapse.scss
@@ -4,6 +4,7 @@
    @group Collapse-content-block
 ============================================================================ */
 
+@import "config";
 @import "helpers/mixins";
 
 /* Collapse-content-block Behavior
