--- a/sass/includes/_additional.scss
+++ b/sass/includes/_additional.scss
@@ -2,6 +2,7 @@
 		MASTER-CLASSES B
 ============================================================================= */
 
+@import "config";
 @import "helpers/mixins";
 
 // Add wireframes to the basic layout elements.
