--- a/sass/includes/_basic.scss
+++ b/sass/includes/_basic.scss
@@ -2,6 +2,7 @@
 		MASTER-CLASSES A
 ============================================================================= */
 
+@import "config";
 @import "helpers/mixins";
 
 .weiss-cf {
