--- a/sass/media/_screen.scss
+++ b/sass/media/_screen.scss
@@ -1,7 +1,8 @@
 /* ============================================================================
-		MEDIA QUERIES 
+		MEDIA QUERIES
 ============================================================================= */
 
+@import "config";
 @import "helpers/mixins";
 
 @media screen and (min-width:1281px) {
