--- a/sass/page/_global-blocks.scss
+++ b/sass/page/_global-blocks.scss
@@ -2,10 +2,11 @@
    GLOBAL BLOCKS
 ============================================================================ */
 
+@import "config";
 @import "helpers/mixins";
 
 /* @group Form Support
---------------------------------------------------------------------------- */
+	-------------------------------------------------------------------------- */
 
 .form {}
 
