--- a/sass/page/_global.scss
+++ b/sass/page/_global.scss
@@ -5,6 +5,7 @@
 //          http://dimanech.github.com/weiss/  \ \
 //
 
+@import "config";
 @import "helpers/mixins";
 
 article, aside, details, figcaption, figure,
