--- a/sass/page/_specific-html-support.scss
+++ b/sass/page/_specific-html-support.scss
@@ -2,6 +2,7 @@
 		SPECIFIC HTML TAGS SUPPORT
 ============================================================================= */
 
+@import "config";
 @import "helpers/mixins";
 
 /* science */
