--- a/sass/plugins/_custom-selectbox.scss
+++ b/sass/plugins/_custom-selectbox.scss
@@ -1,4 +1,5 @@
-@import "mixins";
+@import "config";
+@import "helpers/mixins";
 
 /* ============================================================================
     Select box plugin support
@@ -18,7 +19,7 @@
   font-size: 1em;
   margin: 1px;
   vertical-align: middle;
-  
+
   .ie6-7 & {
     display: inline;
     zoom: 1;
