--- a/sass/media/_print.scss
+++ b/sass/media/_print.scss
@@ -15,10 +15,12 @@
 	-ms-filter: none !important
 }
 
-h1, h2,
-.h1, .h2,
-h3, h4, h5, h6,
-.h3, .h4, .h5, .h6 {
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
 	break-inside: avoid;
 	break-after: avoid;
 	page-break-after: avoid;
