tabs block added

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,6 +29,7 @@
 // --------------------------------------------------------------------------
 
 @import "blocks/collapse";
+@import "blocks/tabs";
 
 // Plugins
 // --------------------------------------------------------------------------
